<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <!--android:layout_marginStart="@dimen/margin_28"
    android:layout_marginEnd="@dimen/margin_28"-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/title_dialog_no_active_servers_low"
        android:textColor="@color/color20"
        android:textSize="@dimen/tsize_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/roboto_regular"
        android:gravity="start"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16"
        android:text="@string/description_dialog_no_active_servers"
        android:textColor="@color/color20"
        android:textSize="@dimen/tsize_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <!--    android:layout_marginTop="10dp"-->
<!--    android:adjustViewBounds="true"-->
    <ImageView
        android:id="@+id/qr_holder"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_qr_demo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:src="@drawable/ic_qr_demo" />


    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginBottom="@dimen/margin_28"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ok"
        android:textColor="@color/color25"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@id/qr_holder" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/color17"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="@+id/ok"
        app:layout_constraintEnd_toStartOf="@+id/ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>