<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_28"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginEnd="@dimen/margin_28"
        android:alpha="0.6"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_dialog_exit"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tsize_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_28"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_28"
        android:alpha="0.6"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_dialog_exit"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_32"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/no"
        android:textColor="@color/color17"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="@+id/yes"
        app:layout_constraintEnd_toStartOf="@+id/yes"
        app:layout_constraintTop_toTopOf="@+id/yes" />

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/margin_28"
        android:layout_marginBottom="@dimen/margin_28"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/yes"
        android:textColor="@color/color25"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />
</androidx.constraintlayout.widget.ConstraintLayout>