<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_28"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginEnd="@dimen/margin_28"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_dialog_close_every"
        android:textColor="@color/color20"
        android:textSize="@dimen/tsize_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.aigestudio.wheelpicker.WheelPicker
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:alpha="0.77"
        android:paddingStart="@dimen/padding_8"
        android:paddingEnd="@dimen/padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:wheel_atmospheric="true"
        app:wheel_curved="false"
        app:wheel_cyclic="true"
        app:wheel_font_path="roboto_regular.ttf"
        app:wheel_item_text_color="@color/color27"
        app:wheel_item_text_size="@dimen/tsize_25"
        app:wheel_visible_item_count="5" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/time_unit"
        app:layout_constraintBottom_toBottomOf="@+id/value"
        app:layout_constraintStart_toEndOf="@+id/value"
        app:layout_constraintTop_toTopOf="@+id/value"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:layout_marginBottom="@dimen/margin_28"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ok"
        android:textColor="@color/color25"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@id/value" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/color17"
        android:textSize="@dimen/tsize_20"
        app:layout_constraintBottom_toBottomOf="@+id/ok"
        app:layout_constraintEnd_toStartOf="@+id/ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>